# learn_crewai

./: .gitignore  pyproject.toml
demo_project/: README.md  pyproject.toml  report.md
demo_project/src/demo_project/: crew.py  main.py
demo_project/src/demo_project/config/: agents.yaml
