[tool.poetry]
name = "learn-crewai"
version = "0.1.0"
description = "learn poetry"
authors = ["Tao Zhang <forrest_zhang@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<=3.13,>=3.11"
crewai = "^0.67.1"
crewai-tools = "^0.12.1"
llama-index = "^0.11.14"
llama-index-llms-ollama = "^0.3.3"
llama-index-llms-huggingface = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
